--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <!-- Konfiguracja czytana przez freeflow-assistant.js -->
   <meta name="asr-provider" content="browser" />
-  <meta name="gmaps-proxy"  content="/api/places" />
-  <meta name="gpt-proxy"    content="/api/gpt" />
+  <meta name="gmaps-proxy"  content="https://freeflow-backend-vercel.vercel.app/api/places" />
+  <meta name="gpt-proxy"    content="https://freeflow-backend-vercel.vercel.app/api/gpt" />
 
   <style>
     :root{
