--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <meta name="color-scheme" content="dark light" />
 
   <!-- Konfiguracja czytana przez freeflow-assistant.js -->
-  <!-- UWAGA: pełne URL-e do backendu na Vercel -->
   <meta name="asr-provider" content="browser" />
-  <meta name="gmaps-proxy" content="https://freeflow-backend-vercel.vercel.app/api/places" />
-  <meta name="gpt-proxy"   content="https://freeflow-backend-vercel.vercel.app/api/gpt" />
+  <meta name="gmaps-proxy"  content="https://freeflow-backend-vercel.vercel.app/api/places" />
+  <meta name="gpt-proxy"    content="https://freeflow-backend-vercel.vercel.app/api/gpt" />
 
   <style>
     :root{
@@ -36,6 +35,8 @@
       background:radial-gradient(1200px 600px at 50% -200px, rgba(255,149,64,.12), transparent 60%);
       backdrop-filter:blur(.5px);
     }
+
+    /* topbar */
     .topbar{display:flex; align-items:center; justify-content:space-between; gap:12px}
     .brand{display:flex; align-items:baseline; gap:10px; letter-spacing:.2px}
     .brand b{color:var(--brand); font-weight:900; font-size:clamp(24px,4.5vw,36px)}
@@ -47,6 +48,8 @@
       background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur))}
     .cart-badge{position:absolute; transform:translate(14px,-14px); background:#ff9e3d; color:#101217; font-weight:800;
       min-width:26px; height:26px; padding:0 6px; border-radius:999px; display:grid; place-items:center; font-size:13px; border:2px solid #11151b}
+
+    /* stage */
     .stage{display:grid; place-items:center; margin:clamp(14px,3vw,24px) 0 0}
     .logoWrap{position:relative; width:min(82vw,420px); user-select:none; -webkit-user-drag:none; -webkit-tap-highlight-color:transparent;
       filter:drop-shadow(0 12px 60px rgba(0,0,0,.55))}
@@ -54,6 +57,8 @@
     .hit{position:absolute; inset:0; border-radius:36px; background:transparent; border:0}
     .listening .logoWrap{animation:pulse 1.1s ease-in-out infinite}
     @keyframes pulse{0%,100%{filter:drop-shadow(0 10px 48px rgba(255,136,64,.36)); transform:scale(1)} 50%{filter:drop-shadow(0 12px 88px rgba(33,212,253,.55)); transform:scale(1.015)}}
+
+    /* transcription */
     .asr{margin:clamp(8px,2vw,14px) auto 0; width:min(92vw,720px); border-radius:20px; padding:18px 20px;
       background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur));
       display:flex; align-items:center; gap:10px; box-shadow:0 12px 50px rgba(0,0,0,.35)}
@@ -62,11 +67,15 @@
     .ghost{color:var(--muted)}
     .micBtn{width:46px; height:46px; border-radius:14px; border:1px solid var(--glass-brd);
       background:linear-gradient(180deg, rgba(255,143,67,.18), rgba(33,212,253,.14)); display:grid; place-items:center; cursor:pointer}
+
+    /* dock */
     .dock{margin-top:clamp(16px,3.8vh,30px); display:flex; gap:14px; justify-content:center; flex-wrap:wrap}
     .tile{display:flex; align-items:center; gap:12px; min-width:150px; padding:14px 18px; border-radius:22px;
       background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur)); color:#fff; font-weight:700}
     .tile .i{font-size:22px}
     .tile.active{outline:2px solid rgba(33,212,253,.6)}
+
+    /* banner (na błędy/info) */
     .banner{width:min(92vw,720px);margin:8px auto 0;padding:10px 12px;border-radius:12px;border:1px solid var(--glass-brd);
       background:rgba(255,203,72,.15); color:#ffe6a3; font-size:14px}
     .hidden{display:none!important}
@@ -111,7 +120,6 @@
     </nav>
   </div>
 
-  <!-- Twój skrypt asystenta -->
   <script src="freeflow-assistant.js" defer></script>
 </body>
 </html>
