--- a/index.html
+++ b/index.html
@@ -1,64 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pl">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>FreeFlow — Voice to Order</title>
-  <meta name="color-scheme" content="dark light" />
-  <meta name="gmaps-proxy" content="/api/places" />
-  <meta name="gpt-proxy"   content="/api/gpt" />
+  <title>FreeFlow — Voice to order</title>
 
-  <style>
-    :root{--glass-bg:rgba(20,20,22,.55);--glass-brd:rgba(255,255,255,.12);--glass-blur:18px;--text:#f6f7fb;--muted:#c7c9d1;--brand:#ff8a30}
-    *{box-sizing:border-box} html,body{height:100%}
-    body{margin:0;color:var(--text);font:500 16px/1.4 system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial;background:#0d0f13 url(assets/Background.png) center/cover fixed no-repeat;-webkit-font-smoothing:antialiased}
-    .page{min-height:100dvh;display:flex;flex-direction:column;gap:16px;padding:clamp(12px,2.2vw,24px);padding-bottom:calc(24px + env(safe-area-inset-bottom))}
-    .topbar{display:flex;align-items:center;justify-content:space-between}
-    .brand{display:flex;gap:10px;align-items:baseline}.brand b{color:var(--brand);font-weight:900;font-size:clamp(24px,4.5vw,36px)}
-    .brand span{font-weight:900;font-size:clamp(24px,4.5vw,36px)}
-    .tagline{color:var(--muted)}
-    .logoWrap{position:relative;width:min(82vw,420px);margin:18px auto 0;filter:drop-shadow(0 12px 60px rgba(0,0,0,.55))}
-    .logoWrap img{width:100%;display:block;user-select:none;-webkit-user-drag:none}
-    .hit{position:absolute;inset:0;border:0;background:transparent;border-radius:36px}
-    .asr{margin:14px auto 0;width:min(92vw,720px);border-radius:20px;padding:18px 20px;background:var(--glass-bg);border:1px solid var(--glass-brd);backdrop-filter:blur(var(--glass-blur));display:flex;align-items:center;gap:10px;box-shadow:0 12px 50px rgba(0,0,0,.35)}
-    .dot{width:10px;height:10px;border-radius:999px;background:#86e2ff;box-shadow:0 0 16px #86e2ff}
-    .text{flex:1;min-height:1.2em}.ghost{color:var(--muted)}
-    .micBtn{width:46px;height:46px;border-radius:14px;border:1px solid var(--glass-brd);background:linear-gradient(180deg,rgba(255,143,67,.18),rgba(33,212,253,.14));display:grid;place-items:center;cursor:pointer}
-    .banner{width:min(92vw,720px);margin:8px auto 0;padding:12px 14px;border-radius:12px;border:1px solid var(--glass-brd);background:rgba(72,179,255,.12);color:#dff1ff}
-    .hidden{display:none!important}
-    .ctaRow{display:flex;gap:10px;justify-content:center;margin:8px 0}
-    .btn{padding:10px 14px;border-radius:12px;border:1px solid var(--glass-brd);background:var(--glass-bg);color:#fff;cursor:pointer}
-    .listening .logoWrap{animation:pulse 1.1s ease-in-out infinite}
-    @keyframes pulse{0%,100%{filter:drop-shadow(0 10px 48px rgba(255,136,64,.36));transform:scale(1)}50%{filter:drop-shadow(0 12px 88px rgba(33,212,253,.55));transform:scale(1.015)}}
-  </style>
+  <!-- proxy do backendu (Vercel) -->
+  <meta name="gmaps-proxy" content="https://freeflow-backend-vercel.vercel.app/api/places" />
+  <meta name="gpt-proxy"   content="https://freeflow-backend-vercel.vercel.app/api/gpt" />
+  <meta name="tts-proxy"   content="https://freeflow-backend-vercel.vercel.app/api/tts" />
+
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="page" id="app">
-    <header class="topbar">
-      <div>
-        <div class="brand"><b>Free</b><span>Flow</span></div>
-        <div class="tagline">Voice to order — Jedzenie</div>
-      </div>
+  <div id="app">
+    <header class="top">
+      <div class="brand"><b>Free</b>Flow</div>
+      <div class="sub">Voice to order — Złóż zamówienie</div>
     </header>
 
-    <section class="stage">
-      <div class="logoWrap">
-        <img src="assets/Freeflowlogo.png" alt="FreeFlow" width="840" height="1080" />
-        <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
+    <main class="stage">
+      <button id="logoBtn" class="logo" aria-label="Naciśnij, aby mówić"></button>
+
+      <div id="transcript" class="bubble ghost">Powiedz, co chcesz zamówić…</div>
+
+      <div class="dock">
+        <button id="tileFood"  class="tile active">🍽️ Jedzenie</button>
+        <button id="tileTaxi"  class="tile">🚕 Taxi</button>
+        <button id="tileHotel" class="tile">🏡 Hotel</button>
       </div>
 
-      <div class="asr" role="status" aria-live="polite">
-        <div class="dot" id="dot"></div>
-        <div class="text ghost" id="transcript">Powiedz, co chcesz zamówić…</div>
-        <button class="micBtn" id="micBtn" title="Start/Stop">🎤</button>
-      </div>
+      <button id="micBtn" class="mic" title="Start/Stop">🎤</button>
 
       <div id="banner" class="banner hidden"></div>
-      <div class="ctaRow hidden" id="ctaRow">
-        <button class="btn" id="btnOrder">Złóż zamówienie</button>
-        <button class="btn" id="btnAlt">Pokaż alternatywę</button>
-      </div>
-    </section>
+    </main>
   </div>
 
   <script src="freeflow-assistant.js" defer></script>
