--- a/index.html
+++ b/index.html
@@ -1,39 +1,118 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pl">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>FreeFlow — Voice to order</title>
+  <title>FreeFlow — zamów głosem</title>
+  <meta name="color-scheme" content="dark light" />
 
-  <!-- proxy do backendu (Vercel) -->
-  <meta name="gmaps-proxy" content="https://freeflow-backend-vercel.vercel.app/api/places" />
-  <meta name="gpt-proxy"   content="https://freeflow-backend-vercel.vercel.app/api/gpt" />
-  <meta name="tts-proxy"   content="https://freeflow-backend-vercel.vercel.app/api/tts" />
+  <!-- Konfiguracja dla asystenta -->
+  <meta name="asr-provider" content="browser" />
+  <!-- ZMIEŃ na swój backend, albo zostaw względne gdy front i backend na tej samej domenie -->
+  <meta name="gmaps-proxy" content="/api/places" />
+  <meta name="gpt-proxy"   content="/api/gpt" />
 
-  <link rel="stylesheet" href="style.css" />
+  <!-- Prywatność w UI: lekki CSP (reszta w vercel.json) -->
+  <meta http-equiv="referrer" content="strict-origin-when-cross-origin" />
+
+  <style>
+    :root{
+      --glass-bg: rgba(20,20,22,.55);
+      --glass-brd: rgba(255,255,255,.12);
+      --glass-blur: 18px;
+      --text: #f6f7fb; --muted:#c7c9d1; --brand:#ff8a30; --focus:#21d4fd;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; color:var(--text);
+      font:500 16px/1.4 system-ui,-apple-system,Segoe UI,Roboto,Inter,"Helvetica Neue",Arial;
+      background:#0d0f13 url(assets/Background.png) center/cover fixed no-repeat;
+      -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
+    }
+    .page{min-height:100dvh; display:flex; flex-direction:column; gap:16px;
+      padding:clamp(12px,2.2vw,24px);
+      padding-bottom:calc(24px + env(safe-area-inset-bottom));
+      background:radial-gradient(1200px 600px at 50% -200px, rgba(255,149,64,.12), transparent 60%);
+      backdrop-filter:blur(.5px);
+    }
+    .topbar{display:flex; align-items:center; justify-content:space-between; gap:12px}
+    .brand{display:flex; align-items:baseline; gap:10px; letter-spacing:.2px}
+    .brand b{color:var(--brand); font-weight:900; font-size:clamp(24px,4.5vw,36px)}
+    .brand span{font-weight:900; font-size:clamp(24px,4.5vw,36px)}
+    .tagline{color:var(--muted); font-size:clamp(14px,2.6vw,16px); margin-top:4px}
+    .subtag{color:var(--muted); font-size:clamp(12px,2.2vw,14px); opacity:.9; margin-top:2px}
+    .actions{display:flex; gap:10px}
+    .chip{width:44px; height:44px; display:grid; place-items:center; border-radius:14px;
+      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur))}
+    .cart-badge{position:absolute; transform:translate(14px,-14px); background:#ff9e3d; color:#101217; font-weight:800;
+      min-width:26px; height:26px; padding:0 6px; border-radius:999px; display:grid; place-items:center; font-size:13px; border:2px solid #11151b}
+
+    .stage{display:grid; place-items:center; margin:clamp(14px,3vw,24px) 0 0}
+    .logoWrap{position:relative; width:min(82vw,420px); user-select:none; -webkit-user-drag:none; -webkit-tap-highlight-color:transparent;
+      filter:drop-shadow(0 12px 60px rgba(0,0,0,.55))}
+    .logoWrap img{width:100%; height:auto; display:block; pointer-events:none}
+    .hit{position:absolute; inset:0; border-radius:36px; background:transparent; border:0}
+    .listening .logoWrap{animation:pulse 1.1s ease-in-out infinite}
+    @keyframes pulse{0%,100%{filter:drop-shadow(0 10px 48px rgba(255,136,64,.36)); transform:scale(1)} 50%{filter:drop-shadow(0 12px 88px rgba(33,212,253,.55)); transform:scale(1.015)}}
+
+    .asr{margin:clamp(8px,2vw,14px) auto 0; width:min(92vw,720px); border-radius:20px; padding:18px 20px;
+      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur));
+      display:flex; align-items:center; gap:10px; box-shadow:0 12px 50px rgba(0,0,0,.35)}
+    .dot{width:10px; height:10px; border-radius:999px; background:#86e2ff; box-shadow:0 0 16px #86e2ff}
+    .text{flex:1; min-height:1.2em}
+    .ghost{color:var(--muted)}
+    .micBtn{width:46px; height:46px; border-radius:14px; border:1px solid var(--glass-brd);
+      background:linear-gradient(180deg, rgba(255,143,67,.18), rgba(33,212,253,.14)); display:grid; place-items:center; cursor:pointer}
+
+    .dock{margin-top:clamp(16px,3.8vh,30px); display:flex; gap:14px; justify-content:center; flex-wrap:wrap}
+    .tile{display:flex; align-items:center; gap:12px; min-width:150px; padding:14px 18px; border-radius:22px;
+      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur)); color:#fff; font-weight:700}
+    .tile .i{font-size:22px}
+    .tile.active{outline:2px solid rgba(33,212,253,.6)}
+
+    .banner{width:min(92vw,720px);margin:8px auto 0;padding:10px 12px;border-radius:12px;border:1px solid var(--glass-brd);
+      background:rgba(72,179,255,.12); color:#dff1ff; font-size:14px}
+    .hidden{display:none!important}
+    a,button{color:inherit}
+  </style>
 </head>
 <body>
-  <div id="app">
-    <header class="top">
-      <div class="brand"><b>Free</b>Flow</div>
-      <div class="sub">Voice to order — Złóż zamówienie</div>
+  <div class="page" id="app">
+    <header class="topbar">
+      <div>
+        <div class="brand"><b>Free</b><span>Flow</span></div>
+        <div class="tagline">Voice to order — Złóż zamówienie</div>
+        <div class="subtag">Restauracja, taxi albo hotel?</div>
+      </div>
+      <div class="actions">
+        <div class="chip" aria-label="Menu" title="Menu">≡</div>
+        <div class="chip" style="position:relative" aria-label="Koszyk" title="Koszyk">
+          🛒 <span class="cart-badge" id="cartCount">0</span>
+        </div>
+      </div>
     </header>
 
-    <main class="stage">
-      <button id="logoBtn" class="logo" aria-label="Naciśnij, aby mówić"></button>
-
-      <div id="transcript" class="bubble ghost">Powiedz, co chcesz zamówić…</div>
-
-      <div class="dock">
-        <button id="tileFood"  class="tile active">🍽️ Jedzenie</button>
-        <button id="tileTaxi"  class="tile">🚕 Taxi</button>
-        <button id="tileHotel" class="tile">🏡 Hotel</button>
+    <section class="stage">
+      <div class="logoWrap" id="logoWrap">
+        <img src="assets/Freeflowlogo.png?v=1" alt="FreeFlow" width="840" height="1080" />
+        <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
       </div>
 
-      <button id="micBtn" class="mic" title="Start/Stop">🎤</button>
+      <div class="asr" id="asrBox" role="status" aria-live="polite">
+        <div class="dot" id="dot"></div>
+        <div class="text ghost" id="transcript">Powiedz, co chcesz zamówić…</div>
+        <button class="micBtn" id="micBtn" title="Start/Stop">🎤</button>
+      </div>
 
       <div id="banner" class="banner hidden"></div>
-    </main>
+    </section>
+
+    <nav class="dock" aria-label="Kategorie">
+      <button class="tile active" id="tileFood"><span class="i">🍽️</span> <span>Jedzenie</span></button>
+      <button class="tile" id="tileTaxi"><span class="i">🚕</span> <span>Taxi</span></button>
+      <button class="tile" id="tileHotel"><span class="i">🏡</span> <span>Hotel</span></button>
+    </nav>
   </div>
 
   <script src="freeflow-assistant.js" defer></script>
