--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <!-- Prywatność w UI: lekki CSP (reszta w vercel.json) -->
   <meta http-equiv="referrer" content="strict-origin-when-cross-origin" />
 
+  <!-- Preload assets -->
+  <link rel="preload" as="image" href="assets/Background.png">
+  <link rel="preload" as="image" href="assets/Freeflowlogo.png">
+
   <style>
     :root{
       --glass-bg: rgba(20,20,22,.55);
