--- a/index.html
+++ b/index.html
@@ -2,120 +2,231 @@
 <html lang="pl">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>FreeFlow — zamów głosem</title>
-  <meta name="color-scheme" content="dark light" />
-
-  <!-- Konfiguracja dla asystenta -->
-  <meta name="asr-provider" content="browser" />
-  <!-- Pełne URL-e backendu na Vercelu -->
-  <meta name="gmaps-proxy" content="https://freeflow-backend-vercel.vercel.app/api/places" />
-  <meta name="gpt-proxy"   content="https://freeflow-backend-vercel.vercel.app/api/gpt" />
-  <meta name="tts-proxy"   content="https://freeflow-backend-vercel.vercel.app/api/tts" />
-
-  <!-- Prywatność w UI: lekki CSP (reszta w vercel.json) -->
-  <meta http-equiv="referrer" content="strict-origin-when-cross-origin" />
-
-  <style>
-    :root{
-      --glass-bg: rgba(20,20,22,.55);
-      --glass-brd: rgba(255,255,255,.12);
-      --glass-blur: 18px;
-      --text: #f6f7fb; --muted:#c7c9d1; --brand:#ff8a30; --focus:#21d4fd;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; color:var(--text);
-      font:500 16px/1.4 system-ui,-apple-system,Segoe UI,Roboto,Inter,"Helvetica Neue",Arial;
-      background:#0d0f13 url(assets/Background.png) center/cover fixed no-repeat;
-      -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
-    }
-    .page{min-height:100dvh; display:flex; flex-direction:column; gap:16px;
-      padding:clamp(12px,2.2vw,24px);
-      padding-bottom:calc(24px + env(safe-area-inset-bottom));
-      background:radial-gradient(1200px 600px at 50% -200px, rgba(255,149,64,.12), transparent 60%);
-      backdrop-filter:blur(.5px);
-    }
-    .topbar{display:flex; align-items:center; justify-content:space-between; gap:12px}
-    .brand{display:flex; align-items:baseline; gap:10px; letter-spacing:.2px}
-    .brand b{color:var(--brand); font-weight:900; font-size:clamp(24px,4.5vw,36px)}
-    .brand span{font-weight:900; font-size:clamp(24px,4.5vw,36px)}
-    .tagline{color:var(--muted); font-size:clamp(14px,2.6vw,16px); margin-top:4px}
-    .subtag{color:var(--muted); font-size:clamp(12px,2.2vw,14px); opacity:.9; margin-top:2px}
-    .actions{display:flex; gap:10px}
-    .chip{width:44px; height:44px; display:grid; place-items:center; border-radius:14px;
-      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur))}
-    .cart-badge{position:absolute; transform:translate(14px,-14px); background:#ff9e3d; color:#101217; font-weight:800;
-      min-width:26px; height:26px; padding:0 6px; border-radius:999px; display:grid; place-items:center; font-size:13px; border:2px solid #11151b}
-
-    .stage{display:grid; place-items:center; margin:clamp(14px,3vw,24px) 0 0}
-    .logoWrap{position:relative; width:min(82vw,420px); user-select:none; -webkit-user-drag:none; -webkit-tap-highlight-color:transparent;
-      filter:drop-shadow(0 12px 60px rgba(0,0,0,.55))}
-    .logoWrap img{width:100%; height:auto; display:block; pointer-events:none}
-    .hit{position:absolute; inset:0; border-radius:36px; background:transparent; border:0}
-    .listening .logoWrap{animation:pulse 1.1s ease-in-out infinite}
-    @keyframes pulse{0%,100%{filter:drop-shadow(0 10px 48px rgba(255,136,64,.36)); transform:scale(1)} 50%{filter:drop-shadow(0 12px 88px rgba(33,212,253,.55)); transform:scale(1.015)}}
-
-    .asr{margin:clamp(8px,2vw,14px) auto 0; width:min(92vw,720px); border-radius:20px; padding:18px 20px;
-      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur));
-      display:flex; align-items:center; gap:10px; box-shadow:0 12px 50px rgba(0,0,0,.35)}
-    .dot{width:10px; height:10px; border-radius:999px; background:#86e2ff; box-shadow:0 0 16px #86e2ff}
-    .text{flex:1; min-height:1.2em}
-    .ghost{color:var(--muted)}
-    .micBtn{width:46px; height:46px; border-radius:14px; border:1px solid var(--glass-brd);
-      background:linear-gradient(180deg, rgba(255,143,67,.18), rgba(33,212,253,.14)); display:grid; place-items:center; cursor:pointer}
-
-    .dock{margin-top:clamp(16px,3.8vh,30px); display:flex; gap:14px; justify-content:center; flex-wrap:wrap}
-    .tile{display:flex; align-items:center; gap:12px; min-width:150px; padding:14px 18px; border-radius:22px;
-      background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur)); color:#fff; font-weight:700}
-    .tile .i{font-size:22px}
-    .tile.active{outline:2px solid rgba(33,212,253,.6)}
-
-    .banner{width:min(92vw,720px);margin:8px auto 0;padding:10px 12px;border-radius:12px;border:1px solid var(--glass-brd);
-      background:rgba(72,179,255,.12); color:#dff1ff; font-size:14px}
-    .hidden{display:none!important}
-    a,button{color:inherit}
-  </style>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Freeflow — po prostu zamów</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <div class="page" id="app">
-    <header class="topbar">
-      <div>
-        <div class="brand"><b>Free</b><span>Flow</span></div>
-        <div class="tagline">Voice to order — Złóż zamówienie</div>
-        <div class="subtag">Restauracja, taxi albo hotel?</div>
-      </div>
-      <div class="actions">
-        <div class="chip" aria-label="Menu" title="Menu">≡</div>
-        <div class="chip" style="position:relative" aria-label="Koszyk" title="Koszyk">
-          🛒 <span class="cart-badge" id="cartCount">0</span>
-        </div>
-      </div>
-    </header>
-
-    <section class="stage">
-      <div class="logoWrap" id="logoWrap">
-        <img src="assets/Freeflowlogo.png?v=1" alt="FreeFlow" width="840" height="1080" />
-        <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
-      </div>
-
-      <div class="asr" id="asrBox" role="status" aria-live="polite">
-        <div class="dot" id="dot"></div>
-        <div class="text ghost" id="transcript">Powiedz, co chcesz zamówić…</div>
-        <button class="micBtn" id="micBtn" title="Start/Stop">🎤</button>
-      </div>
-
-      <div id="banner" class="banner hidden"></div>
+<body class="bg-neutral-950 text-white">
+  <main class="min-h-screen flex flex-col items-center">
+    <!-- HERO -->
+    <section class="w-full max-w-3xl px-5 pt-16 pb-6 text-center">
+      <h1 class="text-4xl md:text-5xl font-extrabold tracking-tight">
+        Freeflow <span class="opacity-80">— po prostu zamów</span>
+      </h1>
+      <p class="mt-3 text-neutral-300">
+        Powiedz, czego potrzebujesz: „dwie pizze w Krakowie o 20:00”, „zamów taxi na 18:30”, „nocleg w Warszawie”.
+      </p>
     </section>
 
-    <nav class="dock" aria-label="Kategorie">
-      <button class="tile active" id="tileFood"><span class="i">🍽️</span> <span>Jedzenie</span></button>
-      <button class="tile" id="tileTaxi"><span class="i">🚕</span> <span>Taxi</span></button>
-      <button class="tile" id="tileHotel"><span class="i">🏡</span> <span>Hotel</span></button>
-    </nav>
-  </div>
+    <!-- BOX ZAMÓWIENIA -->
+    <section class="w-full max-w-3xl px-5">
+      <div class="rounded-2xl bg-black/30 backdrop-blur border border-white/10 p-5">
+        <div class="flex items-center gap-3">
+          <button id="micBtn"
+                  class="shrink-0 rounded-full p-4 bg-emerald-500/20 border border-emerald-400/30 hover:bg-emerald-500/30 transition"
+                  title="Włącz mikrofon">
+            🎤
+          </button>
+          <input id="queryInput" type="text" inputmode="text"
+                 placeholder="Powiedz lub wpisz zamówienie…"
+                 class="w-full bg-white/5 border border-white/10 rounded-xl px-4 py-3 outline-none focus:border-emerald-400"/>
+          <button id="sendBtn"
+                  class="rounded-xl px-4 py-3 bg-emerald-500 text-black font-semibold hover:bg-emerald-400 transition">
+            Wyślij
+          </button>
+        </div>
 
-  <script src="freeflow-assistant.js" defer></script>
+        <div id="hint" class="mt-3 text-sm text-neutral-400">
+          Próba automatycznego włączenia mikrofonu… Jeśli prośba o uprawnienie się nie pojawi, kliknij „🎤”.
+        </div>
+
+        <div id="status" class="mt-3 text-xs text-neutral-400"></div>
+
+        <div id="result" class="mt-5 hidden">
+          <h3 class="font-semibold text-neutral-200">Wynik</h3>
+          <pre id="json" class="mt-2 text-xs bg-white/5 border border-white/10 rounded-lg p-3 overflow-x-auto"></pre>
+        </div>
+      </div>
+    </section>
+
+    <!-- KOSZYK / POTWIERDZENIE (prosty placeholder na dziś) -->
+    <section class="w-full max-w-3xl px-5 mt-6">
+      <div id="confirmBox" class="hidden rounded-2xl bg-black/30 backdrop-blur border border-white/10 p-5">
+        <h3 class="font-semibold text-neutral-200">Potwierdzenie</h3>
+        <p id="confirmText" class="mt-2 text-neutral-300"></p>
+      </div>
+    </section>
+
+    <footer class="mt-auto py-10 text-xs text-neutral-500">
+      Bez profilowania. Sesja tymczasowa. © Freeflow
+    </footer>
+  </main>
+
+<script>
+(() => {
+  // ====== KONFIG ======
+  const HOST = 'https://freeflow-backend-vercel.vercel.app';
+  const ENDPOINTS = {
+    plan:  `${HOST}/api/plan`,
+    tts:   `${HOST}/api/tts`,
+    places:`${HOST}/api/places`,
+  };
+
+  // ====== STAN SESJI (bez profilowania) ======
+  const sessionId = (() => {
+    const k = 'ff_session';
+    let v = sessionStorage.getItem(k);
+    if (!v) { v = crypto.randomUUID(); sessionStorage.setItem(k, v); }
+    return v;
+  })();
+
+  // ====== ELEMENTY UI ======
+  const micBtn = document.getElementById('micBtn');
+  const queryInput = document.getElementById('queryInput');
+  const sendBtn = document.getElementById('sendBtn');
+  const statusEl = document.getElementById('status');
+  const resultWrap = document.getElementById('result');
+  const jsonEl = document.getElementById('json');
+  const hintEl = document.getElementById('hint');
+  const confirmBox = document.getElementById('confirmBox');
+  const confirmText = document.getElementById('confirmText');
+
+  // ====== NARZĘDZIA ======
+  const speakLocal = (text) => {
+    try {
+      const u = new SpeechSynthesisUtterance(text);
+      u.lang = 'pl-PL';
+      window.speechSynthesis.cancel();
+      window.speechSynthesis.speak(u);
+    } catch {}
+  };
+
+  const speakFromBackend = async (text) => {
+    try {
+      const r = await fetch(ENDPOINTS.tts, {
+        method: 'POST',
+        headers: {'Content-Type': 'application/json'},
+        body: JSON.stringify({ text, lang: 'pl-PL' }),
+      });
+      if (!r.ok) throw new Error('TTS HTTP ' + r.status);
+      const blob = await r.blob();
+      const url = URL.createObjectURL(blob);
+      const a = new Audio(url);
+      await a.play();
+    } catch (e) {
+      // fallback do TTS przeglądarki
+      speakLocal(text);
+    }
+  };
+
+  const showStatus = (msg) => { statusEl.textContent = msg || ''; };
+  const showResult = (obj) => {
+    resultWrap.classList.remove('hidden');
+    jsonEl.textContent = JSON.stringify(obj, null, 2);
+  };
+
+  // ====== ROZPOZNAWANIE MOWY (Web Speech API) ======
+  let recognizing = false;
+  let recognition;
+
+  const initRecognition = () => {
+    const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
+    if (!SR) return null;
+    const rec = new SR();
+    rec.lang = 'pl-PL';
+    rec.interimResults = false;
+    rec.maxAlternatives = 1;
+
+    rec.onstart = () => { recognizing = true; showStatus('Słucham… powiedz zamówienie.'); micBtn.classList.add('ring-2','ring-emerald-400'); };
+    rec.onend   = () => { recognizing = false; micBtn.classList.remove('ring-2','ring-emerald-400'); };
+    rec.onerror = (e) => { recognizing = false; showStatus('Błąd mikrofonu: ' + (e.error || 'nieznany')); };
+
+    rec.onresult = async (ev) => {
+      const transcript = ev.results[0][0].transcript.trim();
+      queryInput.value = transcript;
+      showStatus(`Rozpoznano: “${transcript}”`);
+      await handleQuery(transcript);
+    };
+
+    return rec;
+  };
+
+  const startMic = async () => {
+    try {
+      // Wymusza prompt uprawnień w części przeglądarek
+      await navigator.mediaDevices.getUserMedia({ audio: true });
+    } catch {}
+    try {
+      if (!recognition) recognition = initRecognition();
+      if (recognition && !recognizing) recognition.start();
+    } catch (e) {
+      showStatus('Nie mogę uruchomić rozpoznawania mowy. Kliknij „🎤”.');
+    }
+  };
+
+  // ====== OBSŁUGA ZAPYTANIA ======
+  async function handleQuery(text) {
+    const q = (text || queryInput.value || '').trim();
+    if (!q) { showStatus('Podaj treść zamówienia.'); return; }
+
+    showStatus('Przetwarzam zamówienie…');
+    confirmBox.classList.add('hidden');
+
+    try {
+      const res = await fetch(ENDPOINTS.plan, {
+        method: 'POST',
+        headers: {'Content-Type':'application/json'},
+        body: JSON.stringify({ query: q, sessionId }),
+      });
+      const data = await res.json();
+
+      if (!res.ok) {
+        showStatus((data && data.error) ? `Błąd: ${data.error}` : `Błąd: HTTP ${res.status}`);
+        showResult(data || {});
+        return;
+      }
+
+      showResult(data);
+      // proste potwierdzenie
+      confirmText.textContent = `OK. Zrozumiałem: ${q}. Krok: ${data.steps?.[0]?.message || '—'}`;
+      confirmBox.classList.remove('hidden');
+
+      // mówimy do użytkownika
+      await speakFromBackend('Zamówienie przyjęte. ' + (data.steps?.[0]?.message || ''));
+
+      showStatus('Gotowe.');
+    } catch (e) {
+      showStatus('Błąd połączenia.');
+    }
+  }
+
+  // ====== ZDARZENIA ======
+  sendBtn.addEventListener('click', () => handleQuery());
+  micBtn.addEventListener('click', () => startMic());
+  queryInput.addEventListener('keydown', (e) => {
+    if (e.key === 'Enter') handleQuery();
+  });
+
+  // ====== START: auto-instrukcja + próba auto-mikrofonu ======
+  const startup = async () => {
+    const intro = 'Freeflow — po prostu zamów. Powiedz na głos swoje zamówienie.';
+    // mówimy od razu (to zwykle działa bez gestu)
+    speakLocal(intro);
+    // spróbuj włączyć mikrofon automatycznie (może wymagać gestu – wtedy pokaż hint)
+    try {
+      await startMic();
+      hintEl.textContent = 'Mikrofon włączony. Mów śmiało!';
+    } catch {
+      hintEl.textContent = 'Kliknij ikonę 🎤, aby włączyć mikrofon.';
+    }
+
+    // plan B: pierwszy dotyk w dowolnym miejscu również odpali mikrofon
+    const oneTap = () => { startMic(); window.removeEventListener('pointerdown', oneTap); };
+    window.addEventListener('pointerdown', oneTap, { once: true });
+  };
+
+  window.addEventListener('DOMContentLoaded', startup);
+})();
+</script>
 </body>
 </html>
